--- a/main.html
+++ b/main.html
@@ -6,8 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="static\style.css">
 </head>
-<body onload = "startGame()">
-
+<body>
+    <div class = "container">
+        <canvas id = "gameCanvas"></canvas>
+        <div class = "controls">
+            <button onclick = "startGame()">Start</button>
+            <button onclick = "clearGame()">Stop</button>
+        </div>
+    </div>
 
     <script src = "static\script.js"></script>
 </body>
