--- a/main.html
+++ b/main.html
@@ -10,9 +10,10 @@
     <div class = "container">
         <canvas id = "gameCanvas"></canvas>
         <div class = "controls">
+            <p id = "timer">Timer: 0</p>
             <p id = "score">Score: 0</p>
-            <button onclick = "startGame()">Start</button>
-            <button onclick = "clearGame()">Stop</button>
+            <button onclick = "startGameWithDelay()">Start</button>
+            <button onclick = "clearGame()">Reset</button>
         </div>
     </div>
 
